--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
-		"realm": "^1.8.3"
+		"react-native-navigation": "^1.1.133",
+		"react-redux": "^5.0.5",
+		"realm": "^1.8.3",
+		"redux": "^3.7.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
