--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "finkaApp",
+	"name": "finkaapp",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -7,12 +7,14 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.45.1",
-		"react-native-navigation": "^1.1.133",
+		"axios": "^0.16.2",
+		"react": "^16.0.0-alpha.12",
+		"react-native": "^0.45.1",
+		"react-native-navigation": "^1.1.134",
 		"react-redux": "^5.0.5",
 		"realm": "^1.8.3",
-		"redux": "^3.7.1"
+		"redux": "^3.7.1",
+		"redux-axios-middleware": "^4.0.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
