--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.16.2",
+		"prop-types": "^15.5.10",
 		"react": "^16.0.0-alpha.12",
 		"react-native": "^0.45.1",
 		"react-native-navigation": "^1.1.134",
