dependencies and pin screen setup

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"prop-types": "^15.5.10",
 		"react": "^16.0.0-alpha.12",
 		"react-native": "^0.45.1",
+		"react-native-elements": "^0.13.0",
 		"react-native-navigation": "^1.1.134",
+		"react-native-vector-icons": "^4.2.0",
 		"react-redux": "^5.0.5",
-		"realm": "^1.8.3",
 		"redux": "^3.7.1",
 		"redux-axios-middleware": "^4.0.0"
 	},
