--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "jsx-quotes": ["error", "prefer-single"]
     },
     "globals": {
-        "fetch": false
+        "fetch": false,
+        "__DEV__": false
     }
 }
