--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-native": "^0.45.1",
 		"react-native-elements": "^0.13.0",
 		"react-native-navigation": "^1.1.134",
+		"react-native-simple-store": "^1.3.0",
 		"react-native-vector-icons": "^4.2.0",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.1",
