--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.45.1",
     "react-native-elements": "^0.13.0",
+    "react-native-gifted-chat": "^0.2.0",
     "react-native-navigation": "^1.1.134",
     "react-native-simple-store": "^1.3.0",
     "react-native-vector-icons": "^4.2.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^5.1.0",
     "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react-native": "^2.3.2",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
   },
