--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.16.2",
     "prop-types": "^15.5.10",
     "react": "^16.0.0-alpha.12",
+    "react-actioncable-provider": "^0.1.0",
     "react-native": "^0.45.1",
+    "react-native-actioncable": "0.0.3",
     "react-native-elements": "^0.13.0",
     "react-native-gifted-chat": "^0.2.0",
     "react-native-navigation": "^1.1.134",
